
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {double width; int x; int y; } ;
struct TYPE_4__ {scalar_t__ id; } ;
struct TYPE_6__ {TYPE_2__ rect; TYPE_1__ classification; } ;
typedef TYPE_3__ ccv_comp_t ;



__attribute__((used)) static int _ccv_is_equal_same_class(const void* _r1, const void* _r2, void* data)
{
 const ccv_comp_t* r1 = (const ccv_comp_t*)_r1;
 const ccv_comp_t* r2 = (const ccv_comp_t*)_r2;
 int distance = (int)(r1->rect.width * 0.25 + 0.5);

 return r2->classification.id == r1->classification.id &&
     r2->rect.x <= r1->rect.x + distance &&
     r2->rect.x >= r1->rect.x - distance &&
     r2->rect.y <= r1->rect.y + distance &&
     r2->rect.y >= r1->rect.y - distance &&
     r2->rect.width <= (int)(r1->rect.width * 1.5 + 0.5) &&
     (int)(r2->rect.width * 1.5 + 0.5) >= r1->rect.width;
}
